--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,13 @@
-name: Build Vue
+name: Build
 on:
-  pull_request:
-    branches:
-      - main
+  [push, pull_request]
+  branches:
+    - 'master'
+
 
 jobs:
   cypress-run:
-    name: Cypress run
+    name: Checkout
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
@@ -26,7 +27,7 @@ jobs:
           # pass the project ID from the secrets through environment variable
           CYPRESS_PROJECT_ID: ${{ secrets.CYPRESS_PROJECT_ID }}
 
-      - name: Build Checkout
+      - name: Build & Deploy
       - uses: actions/checkout@v2
       - id: Build-Vue
        
