--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,14 +3,13 @@ on: [pull_request]
 
 jobs:
   cypress-run:
-    name: Checkout
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
       
       - name: Cypress run
-      - uses: cypress-io/github-action@v4
+        uses: cypress-io/github-action@v4
         with:
           start: npm run serve
           wait-on: http://localhost:8080/
@@ -24,8 +23,8 @@ jobs:
           CYPRESS_PROJECT_ID: ${{ secrets.CYPRESS_PROJECT_ID }}
 
       - name: Build & Deploy
-      - uses: actions/checkout@v2
-      - id: Build-Vue
+        uses: actions/checkout@v2
+       id: Build-Vue
        
       - uses: xRealNeon/VuePagesAction@1.0.1
         with:
