--- a/renovate.json5
+++ b/renovate.json5
@@ -4,7 +4,8 @@
   ],
   "automerge": true,
   "major": {
-    "automerge": false
+    "automerge": false,
+    "assignee": ["tj2904"]
   },
   "labels": [
     "type: dependencies",
