--- a/renovate.json5
+++ b/renovate.json5
@@ -5,7 +5,6 @@
   "automerge": true,
   "major": {
     "automerge": false,
-    "reviewer": ["tj2904"]
   },
   "labels": [
     "type: dependencies",
@@ -23,6 +22,7 @@
       "groupName": "devDependencies (non-major)"
     }
   ],
+  "reviewer": ["tj2904"],
   "masterIssue": true,
   "prConcurrentLimit": 8,
   "prHourlyLimit": 6,
